refactor: migrate from javax.servlet to jakarta.servlet and clean up code